--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
   top: 13px;
   width: 20px;
   height: 20px;
-  background: url("/filter/images/down.png");
+  background: url("/images/down.png");
   background-size: contain;
   background-repeat: no-repeat;
   transition: all 0.3s ease-in-out;
@@ -64,7 +64,7 @@
   width: 14px;
   height: 14px;
   transform: translateY(-40%);
-  background: url("/filter/images/check.png");
+  background: url("/images/check.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
