--- a/css/style.css
+++ b/css/style.css
@@ -91,35 +91,35 @@
   box-shadow: 0 4px 8px 0 rgba(0, 42, 59, 0.24);
 }
 
-#audienceList .checkbox-row {
+.option-wrap .checkbox-row {
   cursor: pointer;
   position: relative;
   width: 100%;
   display: flex;
 }
 
-#audienceList li {
+.option-wrap li {
   margin-bottom: 20px;
 }
 
-#audienceList label {
+.option-wrap label {
   font-size: 0;
 }
 
-#audienceList .checkbox-wrap {
+.option-wrap .checkbox-wrap {
   position: relative;
   display: inline-block;
   width: 20px;
   height: 20px;
 }
 
-#audienceList .text-with-num {
+.option-wrap .text-with-num {
   position: relative;
   width: calc(100% - 20px);
   padding-left: 8px;
 }
 
-#audienceList .text-with-num span {
+.option-wrap .text-with-num span {
   padding: 0;
   font-size: 18px;
   font-weight: 400;
