--- a/css/style.css
+++ b/css/style.css
@@ -218,10 +218,11 @@ img {
   color: #005677;
   font-weight: 600;
   font-size: 18px;
-  margin: 12px 0;
+  margin-bottom: 24px;
   text-decoration: underline;
   display: inline-block;
   padding-left: 15px;
+  padding-top: 5px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
